force-app/main/default/objects/Reference_Enterprise_Service__c/Reference_Enterprise_Service__c.object-meta.xml
<CustomObject>
    <label>Reference Enterprise Service</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Reference Enterprise Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Enterprise Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>