force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Area_of_State__c.field-meta.xml
<CustomField>
    <fullName>Area_of_State__c</fullName>
    <label>Area of State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>NW</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>