force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Avg_pay_components_per_check_Detail__c.field-meta.xml
<CustomField>
    <fullName>Avg_pay_components_per_check_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Total Number of Pay Components on the Payroll Register, when field &quot;Avg. pay components per check How many pay components they use per check&quot; value is Yellow or Red</inlineHelpText>
    <label>Avg. pay components per check Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>