force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Broker_c__c.field-meta.xml
<CustomField>
    <fullName>Broker_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>