force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Lookup</description>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Enterprise Services</relationshipLabel>
    <relationshipName>Reference_Enterprise_Services</relationshipName>
    <type>Lookup</type>
</CustomField>