force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Certified_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Certified_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Payroll</label>
    <type>Checkbox</type>
</CustomField>