force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>