force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Cstm_post_process_reports_files_req_dtl__c.field-meta.xml
<CustomField>
    <fullName>Cstm_post_process_reports_files_req_dtl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cstm post process reports/files req dtl</label>
    <length>30</length>
    <type>Text</type>
</CustomField>