force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Days_between_TAA_QR_Date_and_TAA_Live_Da__c.field-meta.xml
<CustomField>
    <fullName>Days_between_TAA_QR_Date_and_TAA_Live_Da__c</fullName>
    <formula>CASE(MOD(  TAA_QR_Date__c  - DATE(1985,6,24),7), 

  0 , CASE( MOD(  TAA_Live_Date__c  - TAA_QR_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TAA_Live_Date__c - TAA_QR_Date__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TAA_Live_Date__c - TAA_QR_Date__c  )/7)*5)</formula>
    <label>Days between TAA QR Date and TAA Live Da</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>