force-app/main/default/objects/Reference_Enterprise_Service__c/fields/DD_Participation__c.field-meta.xml
<CustomField>
    <fullName>DD_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Participation</label>
    <type>Checkbox</type>
</CustomField>