force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Direct_Deposit_PayCard__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit_PayCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Deposit/PayCard</label>
    <type>Checkbox</type>
</CustomField>