force-app/main/default/objects/Reference_Enterprise_Service__c/fields/ERR_Comments__c.field-meta.xml
<CustomField>
    <fullName>ERR_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide two sentences on why the client is canceling. This information will be provided directly to the Paychex executive team.</inlineHelpText>
    <label>RM Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>