force-app/main/default/objects/Reference_Enterprise_Service__c/fields/First_Input_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Input_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Input Date</label>
    <type>Date</type>
</CustomField>