force-app/main/default/objects/Reference_Enterprise_Service__c/fields/GL_Spec_COA_and_or_sample_file_attached__c.field-meta.xml
<CustomField>
    <fullName>GL_Spec_COA_and_or_sample_file_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GL Spec, COA and/or sample file attached</label>
    <type>Checkbox</type>
</CustomField>