force-app/main/default/objects/Reference_Enterprise_Service__c/fields/HR_Admin_or_Supervisor_Level_User__c.field-meta.xml
<CustomField>
    <fullName>HR_Admin_or_Supervisor_Level_User__c</fullName>
    <label>Number of HR Admin/Supervisor Level User</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>