force-app/main/default/objects/Reference_Enterprise_Service__c/fields/HR_History_Import__c.field-meta.xml
<CustomField>
    <fullName>HR_History_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR History Import</label>
    <type>Checkbox</type>
</CustomField>