force-app/main/default/objects/Reference_Enterprise_Service__c/fields/HRO_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRO_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HRO Notes</label>
    <type>TextArea</type>
</CustomField>