force-app/main/default/objects/Reference_Enterprise_Service__c/fields/HRO_Targeted_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HRO_Targeted_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HRO Targeted Start Date</label>
    <type>Date</type>
</CustomField>