force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Immediate_HR_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Immediate_HR_Objectives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Immediate HR Objectives</label>
    <length>30</length>
    <type>Text</type>
</CustomField>