force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Imports_Exports__c.field-meta.xml
<CustomField>
    <fullName>Imports_Exports__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Imports/Exports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>