force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Case_Lookup__r.Account.Industry)</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>