force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Integrated_Product_SIPM_Attached__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Product_SIPM_Attached__c</fullName>
    <label>Integrated Product SIPM Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>