force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Internal_Players__c.field-meta.xml
<CustomField>
    <fullName>Internal_Players__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Players</label>
    <length>1250</length>
    <type>LongTextArea</type>
</CustomField>