force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Introduce_Flex__c.field-meta.xml
<CustomField>
    <fullName>Introduce_Flex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Introduce Flex</label>
    <type>Date</type>
</CustomField>