force-app/main/default/objects/Reference_Enterprise_Service__c/fields/IP_SIPM_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_SIPM_Follow_up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IP SIPM Follow up Date</label>
    <type>Date</type>
</CustomField>