force-app/main/default/objects/Reference_Enterprise_Service__c/fields/IT_Review_Needed__c.field-meta.xml
<CustomField>
    <fullName>IT_Review_Needed__c</fullName>
    <label>IT Review Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>