force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Jobs_Detail__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Total Number of Jobs the client has under Company Entry when Jobs value is Yellow or Red</inlineHelpText>
    <label>Jobs Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>