force-app/main/default/objects/Reference_Enterprise_Service__c/fields/List_Special_Ded_Earn_Calcs__c.field-meta.xml
<CustomField>
    <fullName>List_Special_Ded_Earn_Calcs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List Special Ded/Earn Calcs</label>
    <length>30</length>
    <type>Text</type>
</CustomField>