force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Locals__c.field-meta.xml
<CustomField>
    <fullName>Locals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locals?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>