force-app/main/default/objects/Reference_Enterprise_Service__c/fields/LOGO__c.field-meta.xml
<CustomField>
    <fullName>LOGO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HireTech</label>
    <type>Checkbox</type>
</CustomField>