force-app/main/default/objects/Reference_Enterprise_Service__c/fields/MPSC_Location__c.field-meta.xml
<CustomField>
    <fullName>MPSC_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MPSC Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>