force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Normal_Number_of_Checks_per_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Normal_Number_of_Checks_per_Payroll__c</fullName>
    <label>Normal Number of Checks per Payroll</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>