force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Not_Sold_Notes__c.field-meta.xml
<CustomField>
    <fullName>Not_Sold_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Sold Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>