force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Overall_System_Health__c.field-meta.xml
<CustomField>
    <fullName>Overall_System_Health__c</fullName>
    <inlineHelpText>Green • 2 or less escalated issues qtrly• No products at risk• Positive Flex Migration
Yellow • 3-6 escalated issues qtrly• Core products not at risk• Neutral Flex Migration
Red • 6+ escalated issues qtrly• Core products at risk• Poor Flex Migrati</inlineHelpText>
    <label>Overall System Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>