force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Payroll_Training_Needs__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Training_Needs__c</fullName>
    <label>Payroll Training Needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>WebEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>