force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Payx_PESS__c.field-meta.xml
<CustomField>
    <fullName>Payx_PESS__c</fullName>
    <label>HireRight (PESS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>