force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <inlineHelpText>How many positions does the client have under company entry?</inlineHelpText>
    <label>Positions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green: &lt; 1000</fullName>
            </value>
            <value>
                <fullName>Yellow: 1000 - 1999</fullName>
            </value>
            <value>
                <fullName>Red: 2000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>