force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Preview_to_Flex_Notes__c.field-meta.xml
<CustomField>
    <fullName>Preview_to_Flex_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preview to Flex Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>