force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>TEXT(Case_Lookup__r.Priority)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>