force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Push_3_Reason__c.field-meta.xml
<CustomField>
    <fullName>Push_3_Reason__c</fullName>
    <label>Push 3 Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>