force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Push_7_Product__c.field-meta.xml
<CustomField>
    <fullName>Push_7_Product__c</fullName>
    <label>Push 7 Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Administration</fullName>
            </value>
            <value>
                <fullName>Benetrac (Preview)</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Expensewire</fullName>
            </value>
            <value>
                <fullName>Flex Hiring</fullName>
            </value>
            <value>
                <fullName>Flex Onboarding</fullName>
            </value>
            <value>
                <fullName>Flex Time</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>Health &amp; Benefits (ESR and Insurance)</fullName>
            </value>
            <value>
                <fullName>HR Online</fullName>
            </value>
            <value>
                <fullName>myStaffingPro (Preview)</fullName>
            </value>
            <value>
                <fullName>Paychex Benefits Account (S125/FSA)</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Retirement Services</fullName>
            </value>
            <value>
                <fullName>TLO (Preview)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>