force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Push_9_Comments__c.field-meta.xml
<CustomField>
    <fullName>Push_9_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Push 9 Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>