force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Requirements_Gathering_Method__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Gathering_Method__c</fullName>
    <label>Requirements Gathering Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone/Conf Call</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>WebEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>