force-app/main/default/objects/Reference_Enterprise_Service__c/fields/SIPM_Name__c.field-meta.xml
<CustomField>
    <fullName>SIPM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIPM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Enterprise_Services_SIPM</relationshipName>
    <type>Lookup</type>
</CustomField>