force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Site_Alias__c.field-meta.xml
<CustomField>
    <fullName>Site_Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>