force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Source_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Business__c</fullName>
    <label>Source of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Franchise Channel</fullName>
            </value>
            <value>
                <fullName>MMS Sales</fullName>
            </value>
            <value>
                <fullName>NCO</fullName>
            </value>
            <value>
                <fullName>Acquisitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>