force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Special_OT_Calcs__c.field-meta.xml
<CustomField>
    <fullName>Special_OT_Calcs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special OT Calcs</label>
    <type>Checkbox</type>
</CustomField>