force-app/main/default/objects/Reference_Enterprise_Service__c/fields/TAA_Number_of_Supervisors__c.field-meta.xml
<CustomField>
    <fullName>TAA_Number_of_Supervisors__c</fullName>
    <label>TAA Number of Supervisors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>