force-app/main/default/objects/Reference_Enterprise_Service__c/fields/TAA_QR_Date__c.field-meta.xml
<CustomField>
    <fullName>TAA_QR_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAA QR Date</label>
    <type>Date</type>
</CustomField>