force-app/main/default/objects/Reference_Enterprise_Service__c/fields/TAA_Sup_Training_Date_1__c.field-meta.xml
<CustomField>
    <fullName>TAA_Sup_Training_Date_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAA Sup Training Date 1</label>
    <type>Date</type>
</CustomField>