force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Tax_Credits__c.field-meta.xml
<CustomField>
    <fullName>Tax_Credits__c</fullName>
    <label>Tax Credits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hiretech</fullName>
            </value>
            <value>
                <fullName>3rd Party Vendor</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>