force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Taxes_Detail__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Total Number of Fed, State and Local Taxes under Company Entry, when Taxes value is Yellow or Red</inlineHelpText>
    <label>Taxes Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>