force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Timeclock_file_attached__c.field-meta.xml
<CustomField>
    <fullName>Timeclock_file_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeclock file attached</label>
    <type>Checkbox</type>
</CustomField>