force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Tipped_Employees__c.field-meta.xml
<CustomField>
    <fullName>Tipped_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipped Employees</label>
    <type>Checkbox</type>
</CustomField>