force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Transfer_to_Ongoing_Support_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Ongoing_Support_Initiated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer to Ongoing Support Initiated</label>
    <type>Date</type>
</CustomField>