force-app/main/default/objects/Reference_Enterprise_Service__c/fields/Wire_Threshold_Potential__c.field-meta.xml
<CustomField>
    <fullName>Wire_Threshold_Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Threshold Potential</label>
    <type>Checkbox</type>
</CustomField>