force-app/main/default/objects/Reference_Enterprise_Service__c/fields/X3rd_Party_FSA_HSA_HRA__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_FSA_HSA_HRA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Party FSA/HSA/HRA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>