force-app/main/default/objects/Reference_Enterprise_Service__c/fields/X3rd_Party_HRIS__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_HRIS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Party HRIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>