force-app/main/default/objects/Reference_Enterprise_Service__c/recordTypes/ERR_Account_Management_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ERR_Account_Management_Record_Type</fullName>
    <active>true</active>
    <label>ERR Account Management Record Type</label>
</RecordType>