force-app/main/default/objects/Reference_Enterprise_Service__c/recordTypes/Service_Onboarding_Enterprise_Services.recordType-meta.xml
<RecordType>
    <fullName>Service_Onboarding_Enterprise_Services</fullName>
    <active>true</active>
    <label>Service Onboarding Enterprise Services</label>
</RecordType>