force-app/main/default/objects/Reference_Enterprise_Service__c/validationRules/Avg_pay_components_per_check_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Avg_pay_components_per_check_Detail</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Avg_pay_Components_per_check__c , &quot;Yellow: 20 - 29&quot;) ||
ISPICKVAL(Avg_pay_Components_per_check__c, &quot;Red: 30 +&quot;))&amp;&amp;

OR(
ISBLANK( Avg_pay_components_per_check_Detail__c ))</errorConditionFormula>
    <errorDisplayField>Avg_pay_components_per_check_Detail__c</errorDisplayField>
    <errorMessage>Avg. pay components per check Detail is required when Avg pay Components per check selected as Red or Yellow</errorMessage>
</ValidationRule>