force-app/main/default/objects/Reference_Enterprise_Service__c/validationRules/Banks_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Banks_Detail</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Banks__c , &quot;Yellow: 6 - 9&quot;) ||
ISPICKVAL(Banks__c , &quot;Red: 10 +&quot;))&amp;&amp;

OR(
ISBLANK( Banks_Detail__c ))</errorConditionFormula>
    <errorDisplayField>Banks_Detail__c</errorDisplayField>
    <errorMessage>Banks Detail is required when Bank is selected as Red or Yellow</errorMessage>
</ValidationRule>