force-app/main/default/objects/Reference_Enterprise_Service__c/validationRules/BeneTrac.validationRule-meta.xml
<ValidationRule>
    <fullName>BeneTrac</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId = &quot;01270000000UQ53&quot; &amp;&amp;
NOT(ISPICKVAL( Current_Step__c ,&quot;(1 of 12) Sales Rep Conducting Needs Analysis&quot;)||
(ISPICKVAL( Current_Step__c ,&quot;&quot;)))&amp;&amp;

ISBLANK(Text( BeneTrac__c ))</errorConditionFormula>
    <errorDisplayField>BeneTrac__c</errorDisplayField>
    <errorMessage>BeneTrac is a required field when &quot;Current Step&quot; field is not equal to &quot;(1 of 12) Sales Rep Conducting Needs Analysis&quot;</errorMessage>
</ValidationRule>