force-app/main/default/objects/Reference_Enterprise_Service__c/validationRules/Client_Reference_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Reference_Contact_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
RecordTypeId = &quot;01270000000N1g5&quot;,
ISPICKVAL(Reference__c, &quot;Yes&quot;),
ISBLANK(Client_Reference_Contact__c)

)</errorConditionFormula>
    <errorDisplayField>Client_Reference_Contact__c</errorDisplayField>
    <errorMessage>Client Reference Contact Required when field Reference is marked &quot;Yes&quot;.</errorMessage>
</ValidationRule>