force-app/main/default/objects/Reference_Enterprise_Service__c/validationRules/Conversion_Target_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Target_Date</fullName>
    <active>true</active>
    <errorConditionFormula>RecordTypeId = &quot;01270000000UQ53&quot; &amp;&amp;
NOT(ISPICKVAL( Current_Step__c ,&quot;(1 of 12) Sales Rep Conducting Needs Analysis&quot;)||
(ISPICKVAL( Current_Step__c ,&quot;&quot;)))&amp;&amp;
ISBLANK( Payroll_Conversion_Target_Date__c )</errorConditionFormula>
    <errorDisplayField>Payroll_Conversion_Target_Date__c</errorDisplayField>
    <errorMessage>Conversion Target Date is required when  &quot;Current Step&quot; is not equal to (1 of 12) Sales Rep Conducting Needs Analysis</errorMessage>
</ValidationRule>